# -----------------------------------------------------
# libpion automake configuration file for src directory
# -----------------------------------------------------

lib_LTLIBRARIES = libpion.la

libpion_la_SOURCES = Pion.hpp PionLogger.hpp TCPConnection.hpp \
	PionEngine.hpp PionEngine.cpp \
	TCPServer.hpp TCPServer.cpp \
	HTTPRequest.hpp HTTPModule.hpp \
	HTTPResponse.hpp HTTPResponse.cpp \
	HTTPTypes.hpp HTTPTypes.cpp \
	HTTPRequestParser.hpp HTTPRequestParser.cpp \
	HTTPServer.hpp HTTPServer.cpp

libpion_includedir = $(includedir)/libpion
libpion_include_HEADERS = Pion.hpp PionLogger.hpp TCPConnection.hpp \
	PionEngine.hpp TCPServer.hpp HTTPTypes.hpp HTTPModule.hpp \
	HTTPRequest.hpp HTTPResponse.hpp HTTPRequestParser.hpp
