# -----------------------------------------------------
# libpion automake configuration file for src directory
# -----------------------------------------------------

AM_CPPFLAGS = -I../include

lib_LTLIBRARIES = libpion.la

libpion_la_SOURCES = PionEngine.cpp TCPServer.cpp \
	HTTPTypes.cpp HTTPResponse.cpp \
	HTTPRequestParser.cpp HTTPServer.cpp
