# ------------------------------------
# pion-net automake configuration file 
# ------------------------------------

pion_net_includedir = $(includedir)/pion/net
pion_net_include_HEADERS = Pion.hpp \
	PionEngine.hpp TCPConnection.hpp TCPServer.hpp \
	HTTPTypes.hpp HTTPModule.hpp HTTPRequest.hpp HTTPResponse.hpp \
	HTTPRequestParser.hpp HTTPServer.hpp
