# -----------------------------------------------------
# libpion automake configuration file for src directory
# -----------------------------------------------------

libpion_includedir = $(includedir)/libpion
libpion_include_HEADERS = Pion.hpp PionLogger.hpp TCPConnection.hpp \
	PionEngine.hpp TCPServer.hpp HTTPTypes.hpp HTTPModule.hpp \
	HTTPRequest.hpp HTTPResponse.hpp HTTPRequestParser.hpp \
	HTTPServer.hpp
