# -----------------------------------------
# pion-platform automake configuration file 
# -----------------------------------------

pion_platform_includedir = $(includedir)/pion/platform
pion_platform_include_HEADERS = Codec.hpp Database.hpp Event.hpp Reactor.hpp Vocabulary.hpp VocabularyConfig.hpp VocabularyManager.hpp ConfigManager.hpp CodecFactory.hpp DatabaseManager.hpp ReactionEngine.hpp Comparison.hpp
