# -----------------------------------------
# pion-platform automake configuration file 
# -----------------------------------------

pion_platform_includedir = $(includedir)/pion/platform
pion_platform_include_HEADERS = Event.hpp Comparison.hpp ConfigManager.hpp \
	Vocabulary.hpp VocabularyConfig.hpp VocabularyManager.hpp \
	PlatformPlugin.hpp Codec.hpp Database.hpp Reactor.hpp \
	PluginConfig.hpp CodecFactory.hpp DatabaseManager.hpp \
	ReactionScheduler.hpp ReactionEngine.hpp Query.hpp Transform.hpp \
	Protocol.hpp ProtocolFactory.hpp
